Rolls back embedded font change which isn't working out in IE. Truncates long user first names properly. [Fixes #88]

--- a/_scss/component/nav.scss
+++ b/_scss/component/nav.scss
@@ -126,6 +126,8 @@ $nav_item_height: 17px + 26.5px;
     @include media($SM) {
       display: inherit;
       max-width: rem(140px);
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 
