--- a/css/usajobs-design-system-components.css
+++ b/css/usajobs-design-system-components.css
@@ -10020,6 +10020,8 @@ html {
   .usajobs-nav__first_name {
     display: inherit;
     max-width: 14rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 }
 
